Finalizando TCC - parte 1

--- a/relatorio.bib
+++ b/relatorio.bib
@@ -1,7 +1,14 @@
 @MISC{
-        autodockvina,
-        TITLE = "AutodockTools e Vina",
-        HOWPUBLISHED = {\url{https://onlinelibrary.wiley.com/doi/abs/10.1002/jcc.21334
+        autodocktools,
+        TITLE = " Autodock-Tools",
+        HOWPUBLISHED = {\url{http://autodock.scripps.edu/
+}},
+        NOTE = "acessado em 28/04/2018"
+}
+@MISC{
+        pythonfundation,
+        TITLE = " Python Software Foundation",
+        HOWPUBLISHED = {Python Software Foundation. Python Language Reference, disponível em\url{http://www.python.org
 }},
         NOTE = "acessado em 28/04/2018"
 }
@@ -23,6 +30,12 @@
         TITLE = "Estrutura da proteína 1IEP",
         HOWPUBLISHED = {\url{https://www.rcsb.org/structure/1IEP}},
         NOTE = "acessado em 18/04/2018"
+}
+@MISC{
+        sitepdbbind,
+        TITLE = "PDBbind-CN database",
+        HOWPUBLISHED = {\url{http://www.pdbbind.org.cn/download.asp}},
+        NOTE = "acessado em 22/09/2018"
 }
 % 1
 @article{ishikawa2011binding,
@@ -77,7 +90,7 @@
   year={1995},
   publisher={Elsevier}
 }
-% 6
+% MonteCarlo 6
 @article{caflisch1992monte,
   title={Monte Carlo docking of oligopeptides to proteins},
   author={Caflisch, Amedeo and Niederer, Peter and Anliker, Max},
@@ -110,7 +123,7 @@
   year={2017},
   publisher={ACS Publications}
 }
-% 9
+% Kitchen docking 9
 @article{kitchen2004docking,
   title={Docking and scoring in virtual screening for drug discovery: methods and applications},
   author={Kitchen, Douglas B and Decornez, H{\'e}l{\`e}ne and Furr, John R and Bajorath, J{\"u}rgen},
@@ -281,4 +294,11 @@
   pages={1079--1093},
   year={2009},
   publisher={ACS Publications}
+}
+%Desenvolvimento de fármacos é custoso 
+% Referência não customizada
+@article{prnasciutti2012,
+  title={Desenvolvimento De Novos Fármacos},
+  author={Priscilla Regina Nasciutti},
+  year={2012}
 }
