Quase pronto revisão TCC

--- a/relatorio.bib
+++ b/relatorio.bib
@@ -1,43 +1,62 @@
 @MISC{
         autodocktools,
         TITLE = " Autodock-Tools",
-        HOWPUBLISHED = {\url{http://autodock.scripps.edu/
-}},
-        NOTE = "acessado em 28/04/2018"
+        HOWPUBLISHED = {Disponível em \url{http://autodock.scripps.edu/}},
+        YEAR=2018,
+        NOTE = "acessado em 28/04/2018
+}
+@MISC{
+        imagemDocking,
+        TITLE = " SlideShare",
+        HOWPUBLISHED = {Disponível em \url{https://slideplayer.com/slide/5059841/}},
+        YEAR=2018,
+        NOTE = "acessado em 13/11/2018
 }
 @MISC{
         pythonfundation,
         TITLE = " Python Software Foundation",
-        HOWPUBLISHED = {Python Software Foundation. Python Language Reference, disponível em\url{http://www.python.org
-}},
+        HOWPUBLISHED = {Python Software Foundation. Python Language Reference, disponível em\url{http://www.python.org,}},
+        YEAR=2018,
         NOTE = "acessado em 28/04/2018"
 }
 @MISC{
         CAPRI,
         TITLE = "Site CAPRI",
         HOWPUBLISHED = {\url{http://www.capri-docking.org/}},
-        NOTE = "acessado em 03/06/2018"
+        YEAR=2018,
+        NOTE = "acessado em 03/06/2018
 }
 @MISC{
         RIGID_FLEXIBLE,
         TITLE = "Protein-protein docking guided by biochemical data",
-        HOWPUBLISHED = {\url{http://projects.villa-bosch.de/mcm/pictures/i3_5
-}},
+        HOWPUBLISHED = {\url{http://projects.villa-bosch.de/mcm/pictures/i3_5}},
+		YEAR=2018,
         NOTE = "acessado em 23/06/2018"
 }
 @MISC{
         proteina1IEP,
         TITLE = "Estrutura da proteína 1IEP",
         HOWPUBLISHED = {\url{https://www.rcsb.org/structure/1IEP}},
+        YEAR=2018,
         NOTE = "acessado em 18/04/2018"
 }
 @MISC{
         sitepdbbind,
         TITLE = "PDBbind-CN database",
         HOWPUBLISHED = {\url{http://www.pdbbind.org.cn/download.asp}},
+        YEAR=2018,
         NOTE = "acessado em 22/09/2018"
 }
-% 1
+@misc{githubgianluca,
+  author = {Campos Gianluca},
+  title = {TCC IA},
+  year = {2018},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/gianlucampos/TCC\textunderscore IA}},
+  commit = {94f9fcbe90b58cc9c332077eca80461613e1679e}
+}
+% 1 exemplo de uso de docking
 @article{ishikawa2011binding,
   title={Binding mode prediction and inhibitor design of anti-influenza virus diketo acids targeting metalloenzyme RNA polymerase by molecular docking},
   author={Ishikawa, Yoshinobu and Fujii, Satoshi},
@@ -301,4 +320,92 @@
   title={Desenvolvimento De Novos Fármacos},
   author={Priscilla Regina Nasciutti},
   year={2012}
+}
+@article{chakrabarti2000data,
+  title={Data mining for hypertext: A tutorial survey},
+  author={Chakrabarti, Soumen},
+  journal={ACM SIGKDD Explorations Newsletter},
+  volume={1},
+  number={2},
+  pages={1--11},
+  year={2000},
+  publisher={ACM}
+}
+
+@article{boos2017funccoes,
+  title={Fun{\c{c}}{\~o}es de escolha social para elabora{\c{c}}{\~a}o de consenso em aprendizado de m{\'a}quina descentralizado: um estudo em problemas de classifica{\c{c}}{\~a}o multiclasse},
+  author={Boos, Rodrigo Augusto Scheller},
+  year={2017}
+}
+%random forests
+@article{breiman2001random,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
+
+% overfitting rf
+@article{liaw2002classification,
+  title={Classification and regression by randomForest},
+  author={Liaw, Andy and Wiener, Matthew and others},
+  journal={R news},
+  volume={2},
+  number={3},
+  pages={18--22},
+  year={2002}
+}
+
+% rbf kernel
+@article{huang2005extreme,
+  title={Extreme learning machine with randomly assigned RBF kernels},
+  author={Huang, Guang-Bin and Siew, Chee-Kheong},
+  journal={International Journal of Information Technology},
+  volume={11},
+  number={1},
+  pages={16--24},
+  year={2005}
+}
+% svm
+@article{lorena2007introduccao,
+  title={Uma introdu{\c{c}}{\~a}o {\`a}s support vector machines},
+  author={Lorena, Ana Carolina and de Carvalho, Andr{\'e} CPLF},
+  journal={Revista de Inform{\'a}tica Te{\'o}rica e Aplicada},
+  volume={14},
+  number={2},
+  pages={43--67},
+  year={2007}
+}
+@mastersthesis{lima2014avaliaccao,
+  title={Avalia{\c{c}}{\~a}o do algor{\'\i}timo SVM na detec{\c{c}}{\~a}o de comportamentos suspeitos em cenas de v{\'\i}deo},
+  author={Lima, Rodrigo Lucio de},
+  type={{B.S.} thesis},
+  year={2014},
+  school={Universidade Tecnol{\'o}gica Federal do Paran{\'a}}
+}
+% imagem 1
+@article{kore2012computer,
+  title={Computer-aided drug design: an innovative tool for modeling},
+  author={Kore, Pranita P and Mutha, Madhavi M and Antre, Rishikesh V and Oswal, Rajesh J and Kshirsagar, Sandip S},
+  journal={Open Journal of Medicinal Chemistry},
+  volume={2},
+  number={04},
+  pages={139},
+  year={2012},
+  publisher={Scientific Research Publishing}
+}
+% Cross Validation
+@inproceedings{kohavi1995study,
+  title={A study of cross-validation and bootstrap for accuracy estimation and model selection},
+  author={Kohavi, Ron and others},
+  booktitle={Ijcai},
+  volume={14},
+  number={2},
+  pages={1137--1145},
+  year={1995},
+  organization={Montreal, Canada}
 }
